chore: tailwind 제거 #12
* module.css style 작성

* clsx 의존성 추가

* reset css 추가

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,5 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import url("./reset.css");
+@import url("./utils.css");
 
 html,
 body,
@@ -10,19 +9,4 @@ body,
 
 body {
   color: var(--mantine-color-dark-9);
-}
-
-@layer utilities {
-  @variants responsive {
-    /* Hide scrollbar for Chrome, Safari and Opera */
-    .no-scrollbar::-webkit-scrollbar {
-      display: none;
-    }
-
-    /* Hide scrollbar for IE, Edge and Firefox */
-    .no-scrollbar {
-      -ms-overflow-style: none; /* IE and Edge */
-      scrollbar-width: none; /* Firefox */
-    }
-  }
 }
