--- a/src/components/Layout/BottomNav.module.css
+++ b/src/components/Layout/BottomNav.module.css
@@ -1,6 +1,7 @@
 .bottom-nav {
   position: fixed;
   bottom: 0;
+  left: 0;
   width: 100%;
   padding-top: 0.25rem;
   padding-bottom: 0.5rem;
@@ -9,6 +10,10 @@
   border-top: 1px solid var(--mantine-color-gray-0);
   background-color: #fff;
   z-index: 10;
+
+  @media (min-width: $mantine-breakpoint-sm) {
+    display: none;
+  }
 }
 
 .nav-list {
