--- a/src/components/Layout/AppShell.module.css
+++ b/src/components/Layout/AppShell.module.css
@@ -8,6 +8,7 @@
   justify-content: center;
   flex: 1;
   min-height: 100vh;
+  background-color: var(--mantine-color-gray-1);
 
   @media (min-width: $mantine-breakpoint-sm) {
     justify-content: start;
@@ -17,7 +18,7 @@
     width: 100%;
 
     @media (min-width: $mantine-breakpoint-md) {
-      max-width: 1000px;
+      max-width: 900px;
     }
   }
 }
@@ -27,7 +28,11 @@
   width: 100%;
   display: flex;
   align-items: center;
-  padding: 3rem 1rem;
+  padding: 1rem;
+
+  @media (min-width: $mantine-breakpoint-sm) {
+    padding: 3rem 1rem;
+  }
 
   & > span {
     font-family: var(--mantine-font-family-headings);
