--- a/src/features/members/routes/Menu.module.css
+++ b/src/features/members/routes/Menu.module.css
@@ -1,6 +1,6 @@
 .wrap {
   width: 100%;
-  max-width: 20rem;
+  padding: 0 1rem;
 }
 
 .header {
@@ -8,6 +8,7 @@
 }
 
 .nav-list {
+  width: 100%;
   max-width: 20rem;
   padding: 1rem 0;
   border-radius: 0.75rem;
