--- a/src/components/Layout/AppShell.module.css
+++ b/src/components/Layout/AppShell.module.css
@@ -15,6 +15,8 @@
   }
 
   & > div {
+    display: flex;
+    flex-direction: column;
     width: 100%;
 
     @media (min-width: $mantine-breakpoint-md) {
