--- a/src/components/app-shell/app-shell.module.css
+++ b/src/components/app-shell/app-shell.module.css
@@ -17,7 +17,7 @@
   & > div {
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: 100vw;
 
     @media (min-width: $mantine-breakpoint-md) {
       max-width: 990px;
