--- a/src/components/app-shell/app-shell.module.css
+++ b/src/components/app-shell/app-shell.module.css
@@ -17,7 +17,11 @@
   & > div {
     display: flex;
     flex-direction: column;
-    width: 100vw;
+    width: 100%;
+
+    @media (min-width: $mantine-breakpoint-sm) {
+      max-width: 700px;
+    }
 
     @media (min-width: $mantine-breakpoint-md) {
       max-width: 990px;
