feat: 사이드바 인기 태그 컴포넌트 #31

--- a/src/features/tag/components/popular-tag-list.module.css
+++ b/src/features/tag/components/popular-tag-list.module.css
@@ -1,8 +1,13 @@
 .popular-tag-list {
+  display: block;
   padding: 0 1rem;
   margin-bottom: 1rem;
   max-width: 100vw;
   overflow-x: hidden;
+
+  @media (min-width: $mantine-breakpoint-md) {
+    display: none;
+  }
 }
 
 .wrap {
