refactor: app 구조

--- a/src/app/(routes)/login/style.module.css
+++ b/src/app/(routes)/login/style.module.css
@@ -1,5 +1,5 @@
 .wrap {
-  min-height: 100vh;
+  min-height: 100lvh;
   width: 100%;
   background-color: var(--mantine-colors-gray.9);
   background-size: cover;
